@@ -22,6 +22,8 @@ import io.github.mfvanek.pg.utils.HealthLoggerAssertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -33,7 +35,7 @@ class SimpleHealthLoggerTest {
     @Test
     void logInvalidIndexes() {
         Mockito.when(indexesHealthMock.getInvalidIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         Index.of("t1", "i1"),
                         Index.of("t1", "i2"),
                         Index.of("t2", "i3")
@@ -49,16 +51,16 @@ class SimpleHealthLoggerTest {
                 .withDuplicatedIndexesExclusions("i1, i3, ,,,")
                 .build();
         Mockito.when(indexesHealthMock.getDuplicatedIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
-                        DuplicatedIndexes.of(List.of(
+                .thenReturn(Arrays.asList(
+                        DuplicatedIndexes.of(Arrays.asList(
                                 IndexWithSize.of("t1", "i1", 1L),
                                 IndexWithSize.of("t1", "i2", 2L)
                         )),
-                        DuplicatedIndexes.of(List.of(
+                        DuplicatedIndexes.of(Arrays.asList(
                                 IndexWithSize.of("t2", "i3", 3L),
                                 IndexWithSize.of("t2", "i4", 4L)
                         )),
-                        DuplicatedIndexes.of(List.of(
+                        DuplicatedIndexes.of(Arrays.asList(
                                 IndexWithSize.of("t3", "i5", 5L),
                                 IndexWithSize.of("t3", "i6", 6L)
                         ))
@@ -74,7 +76,7 @@ class SimpleHealthLoggerTest {
                 .withUnusedIndexesExclusions("i2, i3, , ,,  ")
                 .build();
         Mockito.when(indexesHealthMock.getUnusedIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         UnusedIndex.of("t1", "i1", 1L, 1L),
                         UnusedIndex.of("t1", "i2", 2L, 2L),
                         UnusedIndex.of("t2", "i3", 3L, 3L),
@@ -91,16 +93,16 @@ class SimpleHealthLoggerTest {
                 .withIntersectedIndexesExclusions("i4,,  , i6")
                 .build();
         Mockito.when(indexesHealthMock.getIntersectedIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
-                        DuplicatedIndexes.of(List.of(
+                .thenReturn(Arrays.asList(
+                        DuplicatedIndexes.of(Arrays.asList(
                                 IndexWithSize.of("t1", "i1", 1L),
                                 IndexWithSize.of("t1", "i2", 2L)
                         )),
-                        DuplicatedIndexes.of(List.of(
+                        DuplicatedIndexes.of(Arrays.asList(
                                 IndexWithSize.of("t2", "i3", 3L),
                                 IndexWithSize.of("t2", "i4", 4L)
                         )),
-                        DuplicatedIndexes.of(List.of(
+                        DuplicatedIndexes.of(Arrays.asList(
                                 IndexWithSize.of("t3", "i5", 5L),
                                 IndexWithSize.of("t3", "i6", 6L)
                         ))
@@ -117,7 +119,7 @@ class SimpleHealthLoggerTest {
                 .withIndexSizeThreshold(2L)
                 .build();
         Mockito.when(indexesHealthMock.getUnusedIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         UnusedIndex.of("t1", "i1", 1L, 1L),
                         UnusedIndex.of("t1", "i2", 2L, 2L),
                         UnusedIndex.of("t2", "i3", 3L, 3L),
@@ -135,7 +137,7 @@ class SimpleHealthLoggerTest {
                 .withIndexSizeThreshold(1, MemoryUnit.MB)
                 .build();
         Mockito.when(indexesHealthMock.getUnusedIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         UnusedIndex.of("t1", "i1", 1_048_576L, 1L),
                         UnusedIndex.of("t1", "i2", 1_048_575L, 2L),
                         UnusedIndex.of("t2", "i3", 1_048_574L, 3L),
@@ -149,10 +151,10 @@ class SimpleHealthLoggerTest {
     @Test
     void logForeignKeysNotCoveredWithIndex() {
         Mockito.when(indexesHealthMock.getForeignKeysNotCoveredWithIndex(any(PgContext.class)))
-                .thenReturn(List.of(
-                        ForeignKey.of("t1", "c1", List.of("f1")),
-                        ForeignKey.of("t1", "c2", List.of("f2")),
-                        ForeignKey.of("t2", "c3", List.of("f3", "f4"))
+                .thenReturn(Arrays.asList(
+                        ForeignKey.of("t1", "c1", Collections.singletonList("f1")),
+                        ForeignKey.of("t1", "c2", Collections.singletonList("f2")),
+                        ForeignKey.of("t2", "c3", Arrays.asList("f3", "f4"))
                 ));
         final IndexesHealthLogger logger = new SimpleHealthLogger(indexesHealthMock);
         final List<String> logs = logger.logAll(Exclusions.empty());
@@ -165,7 +167,7 @@ class SimpleHealthLoggerTest {
                 .withTablesWithMissingIndexesExclusions("t1,  ,,  , t3   ")
                 .build();
         Mockito.when(indexesHealthMock.getTablesWithMissingIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         TableWithMissingIndex.of("t1", 0L, 101L, 1L),
                         TableWithMissingIndex.of("t2", 0L, 202L, 2L),
                         TableWithMissingIndex.of("t3", 0L, 303L, 3L),
@@ -182,7 +184,7 @@ class SimpleHealthLoggerTest {
                 .withTableSizeThreshold(98L)
                 .build();
         Mockito.when(indexesHealthMock.getTablesWithMissingIndexes(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         TableWithMissingIndex.of("t1", 97L, 101L, 1L),
                         TableWithMissingIndex.of("t2", 98L, 202L, 2L),
                         TableWithMissingIndex.of("t3", 99L, 303L, 3L),
@@ -199,7 +201,7 @@ class SimpleHealthLoggerTest {
                 .withTablesWithoutPrimaryKeyExclusions("  ,,   ,   , t4, t6")
                 .build();
         Mockito.when(indexesHealthMock.getTablesWithoutPrimaryKey(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         Table.of("t1", 0L),
                         Table.of("t2", 0L),
                         Table.of("t3", 0L),
@@ -216,7 +218,7 @@ class SimpleHealthLoggerTest {
                 .withTableSizeThreshold(100L)
                 .build();
         Mockito.when(indexesHealthMock.getTablesWithoutPrimaryKey(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         Table.of("t1", 10L),
                         Table.of("t2", 50L),
                         Table.of("t3", 100L),
@@ -233,7 +235,7 @@ class SimpleHealthLoggerTest {
                 .withIndexesWithNullValuesExclusions("i2, i5, , ,,  ")
                 .build();
         Mockito.when(indexesHealthMock.getIndexesWithNullValues(any(PgContext.class)))
-                .thenReturn(List.of(
+                .thenReturn(Arrays.asList(
                         IndexWithNulls.of("t1", "i1", 1L, "f1"),
                         IndexWithNulls.of("t1", "i2", 2L, "f2"),
                         IndexWithNulls.of("t2", "i3", 3L, "f3"),
